--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <li><i class="fab fa-angular fa-fw"></i> Angular</li>
                         <li><i class="fab fa-node-js fa-fw"></i> Node.js</li>
                         <li><img src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20fill%3D%22none%22%3E%3Crect%20width%3D%22512%22%20height%3D%22512%22%20fill%3D%22%23c00%22%20rx%3D%2277%22%20ry%3D%2277%22%20style%3D%22stroke-width%3A1.12281%22%2F%3E%3Cpath%20fill%3D%22black%22%20d%3D%22M91.255%20327.11q-5.43%200-9.232-3.618-3.801-3.712-3.801-8.815%200-5.197%203.801-8.909t9.232-3.712q5.52%200%209.322%203.712%203.892%203.712%203.892%208.909%200%205.103-3.892%208.815-3.801%203.62-9.322%203.619m144.722-2.041h-23.532l-61.996-97.807a44%2044%200%200%201-3.891-7.703h-.544q.725%204.27.725%2018.28v87.23h-20.817V192h25.07l59.915%2095.487q3.8%205.94%204.888%208.166h.361q-.905-5.289-.905-17.91V192h20.726zm101.369%200H264.49V192h69.96v18.745h-48.42v37.675h44.62v18.652h-44.62v39.345h51.316zM440.89%20210.745H403.6V325.07h-21.54V210.745h-37.198V192h96.027z%22%20style%3D%22stroke-width%3A1.12281%22%2F%3E%3C%2Fsvg%3E"
-                                class="custom-svg-icon" alt=".NET Logo"> .NET Web APIs</li>
+                                class="custom-svg-icon" alt=".NET Logo"> .NET Core Web APIs</li>
                         <li><img src="data:image/svg+xml,%3Csvg%20fill%3D%22%23c00%22%20viewBox%3D%220%200%2024%2024%22%20role%3D%22img%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20stroke%3D%22%23c00%22%3E%3Cg%3E%3Ctitle%3EFlutter%20icon%3C%2Ftitle%3E%3Cpath%20d%3D%22M14.314%200L2.3%2012%206%2015.7%2021.684.012h-7.357L14.314%200zm.014%2011.072l-6.471%206.457%206.47%206.47H21.7l-6.46-6.468%206.46-6.46h-7.371z%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fsvg%3E"
                                 class="custom-svg-icon" alt="Flutter Logo"> Flutter</li>
                         <li><i class="fas fa-file-code fa-fw"></i> HTML5 & CSS3</li>
@@ -101,8 +101,8 @@
                     <div class="card h-100">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">El Capitano Explore</h5>
-                            <p class="card-text">A website for a theater company, built with two of my friends. My role
-                                focused on the front-end development using Angular and connecting to our Node.js
+                            <p class="card-text">A website for a theater booking company, built with two of my friends. My role
+                                focused on the back-end development using .Net and connecting to our Node.js
                                 back-end.</p>
                             <a href="https://elcapitanoexplore.com/home" class="btn btn-primary mt-auto"
                                 target="_blank">View Project</a>
