--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">El Capitano Explore</h5>
                             <p class="card-text">A website for a theater booking company, built with two of my friends. My role
-                                focused on the back-end development using .Net and connecting to our Node.js
-                                back-end.</p>
+                                focused on the back-end development using .Net Core and connecting to our Angular
+                                front-end.</p>
                             <a href="https://elcapitanoexplore.com/home" class="btn btn-primary mt-auto"
                                 target="_blank">View Project</a>
                         </div>
@@ -113,10 +113,10 @@
                 <div class="col-md-6 col-lg-4 project-card mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="card h-100">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Real-Time Chat App</h5>
-                            <p class="card-text">A real-time chat application built with Angular and Node.js with
-                                Socket.IO. This project demonstrates my ability to work with WebSockets and event-driven
-                                architecture.</p>
+                            <h5 class="card-title">E-commerce Product Catalog</h5>
+                            <p class="card-text">A responsive e-commerce front-end built from scratch to showcase core web development skills. Implemented with pure
+                            HTML, CSS, and native JavaScript to power features like dynamic product filtering via DOM manipulation, while leveraging
+                            the Bootstrap framework for a modern layout.</p>
                             <a href="#" class="btn btn-secondary disabled mt-auto" aria-disabled="true">Source Code</a>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">E-commerce Product Catalog</h5>
                             <p class="card-text">A front-end for an e-commerce site with product listings, search, and
-                                filtering. The back-end is powered by a .NET Web API to manage the product data.</p>
+                                filtering. The back-end is powered by a .NET Core Web API to manage the product data.</p>
                             <a href="#" class="btn btn-secondary disabled mt-auto" aria-disabled="true">Source Code</a>
                         </div>
                     </div>
