--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hosam Tamer - Web Developer</title>
-    <link rel="shortcut icon" href="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%22500%22%20width%3D%22650%22%20version%3D%221.1%22%3E%3Ctitle%3EEye%20of%20Horus%3C%2Ftitle%3E%3Cpath%20d%3D%22m620.39%2C364.82c-0.53628-7.2677-1.7767-14.482-5.0286-21.276-9.4786-19.803-33.963-29.34-53.026-19.284-15.333%2C8.0885-22.563%2C29.331-13.578%2C45.149%2C6.873%2C12.099%2C23.072%2C18.235%2C35.622%2C10.228%2C4.4328-2.828%2C7.6343-7.2793%2C8.9938-12.286%2C1.3595-5.0063%2C0.68452-10.798-2.9392-15.401-2.2364-2.8407-5.4473-4.7654-9.1114-5.408-3.664-0.64263-8.1708%2C0.40388-10.875%2C3.9972-1.7829%2C2.3692-1.91%2C4.5449-1.4108%2C7.1127%2C0.24961%2C1.2839%2C0.78116%2C2.8399%2C2.3513%2C3.9972%2C1.5702%2C1.1573%2C4.2926%2C1.9424%2C5.5844%2C0.58783%2C1.1069-1.1607-0.67477-3.153-0.73029-4.7559-0.0388-0.83158-0.0772-1.7317%2C0.26004-2.4745%2C0.89679-1.1463%2C1.8493-1.342%2C3.4682-1.0581%2C1.6548%2C0.29023%2C3.6474%2C1.4542%2C4.5851%2C2.6452v0.0588c2.0224%2C2.5986%2C2.3717%2C5.5943%2C1.5284%2C8.6999-0.81645%2C3.0066-2.8568%2C5.919-5.4668%2C7.7006l-0.29391%2C0.23513c-8.5452%2C5.4516-18.484%2C0.70317-23.392-7.9366-6.7162-11.823-1.5113-26.282%2C10.285-32.505%2C15.078-7.9537%2C35.744%2C1.451%2C40.36%2C17.085%2C4.566%2C15.464%2C2.8715%2C30.938%2C0.27385%2C37.511l10.609%2C0.073c2.5579-12.089%2C1.9287-15.035%2C1.9287-22.696z%22%2F%3E%3Cpath%20d%3D%22m158.66%2C157a70.231%2C70.231%2C0%2C0%2C0%2C-14.44%2C42.81%2C70.235%2C70.235%2C0%2C1%2C0%2C140.47%2C0%2C70.231%2C70.231%2C0%2C0%2C0%2C-14.28%2C-42.81h-111.75z%22%20fill%3D%22%23000%22%2F%3E%3Cpath%20stroke%3D%22%23000%22%20d%3D%22m140.86%2C465.53c-6.7333%2C0-8.7137-5.4462-12.181-25.899-2.4479-14.774-7.1068-28.463-10.502-43.043-3.0219-13.117-5.6425-20.332-9.6694-26.618-6.5526-10.229-6.3011-20.921%2C0.71691-30.481%2C6.33-8.6232%2C6.827-11.121%2C6.5471-32.901-0.13783-10.725-0.56403-21.286-0.94711-23.468-0.88077-5.0179-4.6148-7.6923-13.904-9.9586-8.4827-2.0695-16.525-2.2933-41.967-1.1681-18.144%2C0.80245-20.457%2C0.72323-22.75-0.77901-5.627-3.687-2.9527-8.8405%2C12.261-23.626%2C15.69-15.249%2C23.876-24.688%2C38.811-44.75%2C26.839-36.053%2C30.927-40.83%2C57.501-49.189%2C19.575-6.1582%2C26.691-9.0119%2C62.031-10.06%2C24.654-0.7309%2C38.767%2C2.5963%2C45.357%2C3.3466%2C25.219%2C2.8716%2C66.247%2C14.877%2C91.933%2C26.083%2C13.581%2C5.9249%2C14.042%2C6.1723%2C30.115%2C16.152%2C11.981%2C7.4391%2C18.733%2C10.459%2C35.44%2C15.034%2C34.886%2C9.553%2C56.753%2C7.7583%2C92%2C10.378%2C9.2579%2C0.68808%2C49.298%2C3.5149%2C74.5%2C4.4784%2C30.689%2C1.1732%2C35.835-2.0376%2C38.423%2C0.54994%2C2.0315%2C2.0315%2C0.5636%2C8.1815%2C0.6024%2C14.306%2C0.0237%2C3.7378-0.18399%2C7.6642-0.48569%2C11.602-8.1923-1.424-8.0353-1.3676-26.54-2.9165-1.6808-0.14069-16.718-1.6695-44.5-4.1726-11.867-1.0692-70.326-2.8448-105.5-3.9248-16.997-0.52189-34.357-4.7228-51-1.2347-5.7624%2C1.2076%2C2.387-1.1161-16%2C7.4812-36.313%2C14.051-55.853%2C23.79-104.5%2C32.83-30.774%2C4.5201-33.208%2C4.9745-36.376%2C7.2909-1.7456%2C1.2764-1.662%2C1.6171%2C1.6767%2C6.8363%2C3.5642%2C5.5717%2C14.275%2C15.81%2C29.699%2C28.389%2C51.619%2C43.564%2C115.05%2C77.431%2C162.89%2C98.598%2C22.221%2C9.5122%2C37.55%2C14.655%2C50.108%2C16.811%2C61.892%2C13.654%2C134.26-9.4938%2C136.11-56.959%2C0.0489-1.256%2C0.49928-6.001-0.1398-12.079-0.44539-4.2357-0.89625-7.3216-2.2932-11.095-3.9795-10.75-12.413-20.407-28.672-21.755-11.746%2C0.022-20.375%2C6.1561-23.95%2C16.17-4.5622%2C12.78%2C1.3185%2C27.071%2C14.023%2C29.565%2C6.6403%2C1.3038%2C11.222-0.5256%2C14.271-4.4679%2C3.3424-4.3221%2C3.72-12.026%2C1.3559-15.634-2.2757-3.4732-7.2459-5.2754-10.824-3.9248-3.6125%2C1.3636-4.9933%2C0.36555-0.6538-3.1839%2C0.38036-0.24867%2C0.77844-0.4586%2C1.191-0.63136%2C6.6675-2.7918%2C17.127%2C4.1226%2C17.913%2C14.135%2C0.7119%2C11.495-7.7045%2C20.279-19.249%2C20.94-6.5659%2C0.37574-14.594-1.9665-20.026-7.8035-13.425-14.428-9.1712-34.885%2C2.9586-45.762%2C4.6131-4.1366%2C7.7535-6.0583%2C14.065-7.4773%2C19.37-4.3554%2C37.69%2C4.5134%2C45.528%2C24.301%2C3.5645%2C8.9992%2C3.7675%2C16.201%2C3.8515%2C23.221%2C0.70438%2C58.895-65.742%2C87.202-131.95%2C82.517-28.009-2.4123-46.229-6.8095-80.495-20.915-36.58-12.09-143.44-68.32-207.96-120.33-18.846-15.317-30.511-22.813-33.055-21.24-0.61585%2C0.38062-0.98989%2C11.992-0.99221%2C30.802-0.004%2C28.758-0.1019%2C30.352-2.0717%2C33.583-3.2793%2C5.3791-4.935%2C17.725-5.9822%2C44.608-1.6327%2C41.914-2.675%2C60.915-3.4439%2C62.778-1.3963%2C3.383-7.0306%2C4.6642-13.289%2C4.6642zm221.62-252.27c0.41803-2.1707-4.6044-8.6243-11.231-13.08-10.396-6.9893-22.385-11.512-34.092-15.96-71.934-23.518-145.08-20.065-174.03-4.962-10.593%2C5.1512-14.126%2C7.777-22.813%2C15.582-4.1291%2C3.7102-9.5939%2C9.7305-12.144%2C13.379-5.133%2C7.3428-10.014%2C13.339-19.014%2C23.362-9.3026%2C10.359-14.5%2C16.774-14.5%2C17.897%2C0%2C1.5721%2C7.8962%2C3.1488%2C17.5%2C3.5809%2C81.15%2C10.292%2C230.44%2C14.198%2C270.32-39.799zm224.18-69.351c-16.558-0.50003-42.467-2.0158-63.5-4.8954-19.525-2.6732-39.047-6.067-58-11.467-17.982-5.123-35.124-12.85-52.5-19.754-7.7243-3.0694-15.32-6.4533-23-9.6318-8.319-3.4429-16.53-7.1723-25-10.224-15.523-5.5928-30.986-11.946-47.239-14.789-41.988-7.3464-85.261-8.7793-127.76-5.4986-23.554%2C1.8182-46.695%2C7.7124-69.5%2C13.878-17.863%2C4.8293-35.019%2C11.972-52.5%2C18.041-5.069%2C1.761-10.039%2C6.841-15.177%2C5.321-5.396-1.6-10.73-7.749-10.317-13.361%2C0.434-5.884%2C7.835-9.014%2C12.753-12.272%2C16.823-11.146%2C36.498-17.485%2C55.661-23.803%2C19.219-6.3349%2C38.923-12.127%2C59.072-14.001%2C54.326-5.0532%2C110.09-3.4301%2C163.5%2C7.7269%2C28.29%2C5.9098%2C53.945%2C20.759%2C81%2C30.92%2C31.437%2C11.806%2C61.76%2C27.444%2C94.5%2C34.909%2C33.045%2C7.534%2C83.745%2C9.6292%2C101.22%2C9.5911%2C6.5425-0.0143%2C6.7685%2C0.0708%2C8.3595%2C3.1475%2C1.8515%2C3.5805%2C3.1256%2C14.296%2C1.7926%2C15.077-1.3395%2C0.78418-21.593%2C1.4453-33.376%2C1.0894z%22%2F%3E%3C%2Fsvg%3E" type="image/x-icon">
-    <meta name="description" content="Hosam Tamer's Portfolio - Web Developer specializing in front-end and back-end development. Explore skills, projects, and contact information.">
+    <link rel="shortcut icon"
+        href="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%22500%22%20width%3D%22650%22%20version%3D%221.1%22%3E%3Ctitle%3EEye%20of%20Horus%3C%2Ftitle%3E%3Cpath%20d%3D%22m620.39%2C364.82c-0.53628-7.2677-1.7767-14.482-5.0286-21.276-9.4786-19.803-33.963-29.34-53.026-19.284-15.333%2C8.0885-22.563%2C29.331-13.578%2C45.149%2C6.873%2C12.099%2C23.072%2C18.235%2C35.622%2C10.228%2C4.4328-2.828%2C7.6343-7.2793%2C8.9938-12.286%2C1.3595-5.0063%2C0.68452-10.798-2.9392-15.401-2.2364-2.8407-5.4473-4.7654-9.1114-5.408-3.664-0.64263-8.1708%2C0.40388-10.875%2C3.9972-1.7829%2C2.3692-1.91%2C4.5449-1.4108%2C7.1127%2C0.24961%2C1.2839%2C0.78116%2C2.8399%2C2.3513%2C3.9972%2C1.5702%2C1.1573%2C4.2926%2C1.9424%2C5.5844%2C0.58783%2C1.1069-1.1607-0.67477-3.153-0.73029-4.7559-0.0388-0.83158-0.0772-1.7317%2C0.26004-2.4745%2C0.89679-1.1463%2C1.8493-1.342%2C3.4682-1.0581%2C1.6548%2C0.29023%2C3.6474%2C1.4542%2C4.5851%2C2.6452v0.0588c2.0224%2C2.5986%2C2.3717%2C5.5943%2C1.5284%2C8.6999-0.81645%2C3.0066-2.8568%2C5.919-5.4668%2C7.7006l-0.29391%2C0.23513c-8.5452%2C5.4516-18.484%2C0.70317-23.392-7.9366-6.7162-11.823-1.5113-26.282%2C10.285-32.505%2C15.078-7.9537%2C35.744%2C1.451%2C40.36%2C17.085%2C4.566%2C15.464%2C2.8715%2C30.938%2C0.27385%2C37.511l10.609%2C0.073c2.5579-12.089%2C1.9287-15.035%2C1.9287-22.696z%22%2F%3E%3Cpath%20d%3D%22m158.66%2C157a70.231%2C70.231%2C0%2C0%2C0%2C-14.44%2C42.81%2C70.235%2C70.235%2C0%2C1%2C0%2C140.47%2C0%2C70.231%2C70.231%2C0%2C0%2C0%2C-14.28%2C-42.81h-111.75z%22%20fill%3D%22%23000%22%2F%3E%3Cpath%20stroke%3D%22%23000%22%20d%3D%22m140.86%2C465.53c-6.7333%2C0-8.7137-5.4462-12.181-25.899-2.4479-14.774-7.1068-28.463-10.502-43.043-3.0219-13.117-5.6425-20.332-9.6694-26.618-6.5526-10.229-6.3011-20.921%2C0.71691-30.481%2C6.33-8.6232%2C6.827-11.121%2C6.5471-32.901-0.13783-10.725-0.56403-21.286-0.94711-23.468-0.88077-5.0179-4.6148-7.6923-13.904-9.9586-8.4827-2.0695-16.525-2.2933-41.967-1.1681-18.144%2C0.80245-20.457%2C0.72323-22.75-0.77901-5.627-3.687-2.9527-8.8405%2C12.261-23.626%2C15.69-15.249%2C23.876-24.688%2C38.811-44.75%2C26.839-36.053%2C30.927-40.83%2C57.501-49.189%2C19.575-6.1582%2C26.691-9.0119%2C62.031-10.06%2C24.654-0.7309%2C38.767%2C2.5963%2C45.357%2C3.3466%2C25.219%2C2.8716%2C66.247%2C14.877%2C91.933%2C26.083%2C13.581%2C5.9249%2C14.042%2C6.1723%2C30.115%2C16.152%2C11.981%2C7.4391%2C18.733%2C10.459%2C35.44%2C15.034%2C34.886%2C9.553%2C56.753%2C7.7583%2C92%2C10.378%2C9.2579%2C0.68808%2C49.298%2C3.5149%2C74.5%2C4.4784%2C30.689%2C1.1732%2C35.835-2.0376%2C38.423%2C0.54994%2C2.0315%2C2.0315%2C0.5636%2C8.1815%2C0.6024%2C14.306%2C0.0237%2C3.7378-0.18399%2C7.6642-0.48569%2C11.602-8.1923-1.424-8.0353-1.3676-26.54-2.9165-1.6808-0.14069-16.718-1.6695-44.5-4.1726-11.867-1.0692-70.326-2.8448-105.5-3.9248-16.997-0.52189-34.357-4.7228-51-1.2347-5.7624%2C1.2076%2C2.387-1.1161-16%2C7.4812-36.313%2C14.051-55.853%2C23.79-104.5%2C32.83-30.774%2C4.5201-33.208%2C4.9745-36.376%2C7.2909-1.7456%2C1.2764-1.662%2C1.6171%2C1.6767%2C6.8363%2C3.5642%2C5.5717%2C14.275%2C15.81%2C29.699%2C28.389%2C51.619%2C43.564%2C115.05%2C77.431%2C162.89%2C98.598%2C22.221%2C9.5122%2C37.55%2C14.655%2C50.108%2C16.811%2C61.892%2C13.654%2C134.26-9.4938%2C136.11-56.959%2C0.0489-1.256%2C0.49928-6.001-0.1398-12.079-0.44539-4.2357-0.89625-7.3216-2.2932-11.095-3.9795-10.75-12.413-20.407-28.672-21.755-11.746%2C0.022-20.375%2C6.1561-23.95%2C16.17-4.5622%2C12.78%2C1.3185%2C27.071%2C14.023%2C29.565%2C6.6403%2C1.3038%2C11.222-0.5256%2C14.271-4.4679%2C3.3424-4.3221%2C3.72-12.026%2C1.3559-15.634-2.2757-3.4732-7.2459-5.2754-10.824-3.9248-3.6125%2C1.3636-4.9933%2C0.36555-0.6538-3.1839%2C0.38036-0.24867%2C0.77844-0.4586%2C1.191-0.63136%2C6.6675-2.7918%2C17.127%2C4.1226%2C17.913%2C14.135%2C0.7119%2C11.495-7.7045%2C20.279-19.249%2C20.94-6.5659%2C0.37574-14.594-1.9665-20.026-7.8035-13.425-14.428-9.1712-34.885%2C2.9586-45.762%2C4.6131-4.1366%2C7.7535-6.0583%2C14.065-7.4773%2C19.37-4.3554%2C37.69%2C4.5134%2C45.528%2C24.301%2C3.5645%2C8.9992%2C3.7675%2C16.201%2C3.8515%2C23.221%2C0.70438%2C58.895-65.742%2C87.202-131.95%2C82.517-28.009-2.4123-46.229-6.8095-80.495-20.915-36.58-12.09-143.44-68.32-207.96-120.33-18.846-15.317-30.511-22.813-33.055-21.24-0.61585%2C0.38062-0.98989%2C11.992-0.99221%2C30.802-0.004%2C28.758-0.1019%2C30.352-2.0717%2C33.583-3.2793%2C5.3791-4.935%2C17.725-5.9822%2C44.608-1.6327%2C41.914-2.675%2C60.915-3.4439%2C62.778-1.3963%2C3.383-7.0306%2C4.6642-13.289%2C4.6642zm221.62-252.27c0.41803-2.1707-4.6044-8.6243-11.231-13.08-10.396-6.9893-22.385-11.512-34.092-15.96-71.934-23.518-145.08-20.065-174.03-4.962-10.593%2C5.1512-14.126%2C7.777-22.813%2C15.582-4.1291%2C3.7102-9.5939%2C9.7305-12.144%2C13.379-5.133%2C7.3428-10.014%2C13.339-19.014%2C23.362-9.3026%2C10.359-14.5%2C16.774-14.5%2C17.897%2C0%2C1.5721%2C7.8962%2C3.1488%2C17.5%2C3.5809%2C81.15%2C10.292%2C230.44%2C14.198%2C270.32-39.799zm224.18-69.351c-16.558-0.50003-42.467-2.0158-63.5-4.8954-19.525-2.6732-39.047-6.067-58-11.467-17.982-5.123-35.124-12.85-52.5-19.754-7.7243-3.0694-15.32-6.4533-23-9.6318-8.319-3.4429-16.53-7.1723-25-10.224-15.523-5.5928-30.986-11.946-47.239-14.789-41.988-7.3464-85.261-8.7793-127.76-5.4986-23.554%2C1.8182-46.695%2C7.7124-69.5%2C13.878-17.863%2C4.8293-35.019%2C11.972-52.5%2C18.041-5.069%2C1.761-10.039%2C6.841-15.177%2C5.321-5.396-1.6-10.73-7.749-10.317-13.361%2C0.434-5.884%2C7.835-9.014%2C12.753-12.272%2C16.823-11.146%2C36.498-17.485%2C55.661-23.803%2C19.219-6.3349%2C38.923-12.127%2C59.072-14.001%2C54.326-5.0532%2C110.09-3.4301%2C163.5%2C7.7269%2C28.29%2C5.9098%2C53.945%2C20.759%2C81%2C30.92%2C31.437%2C11.806%2C61.76%2C27.444%2C94.5%2C34.909%2C33.045%2C7.534%2C83.745%2C9.6292%2C101.22%2C9.5911%2C6.5425-0.0143%2C6.7685%2C0.0708%2C8.3595%2C3.1475%2C1.8515%2C3.5805%2C3.1256%2C14.296%2C1.7926%2C15.077-1.3395%2C0.78418-21.593%2C1.4453-33.376%2C1.0894z%22%2F%3E%3C%2Fsvg%3E"
+        type="image/x-icon">
+    <meta name="description"
+        content="Hosam Tamer's Portfolio - Web Developer specializing in front-end and back-end development. Explore skills, projects, and contact information.">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -101,9 +104,11 @@
                     <div class="card h-100">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">El Capitano Explore</h5>
-                            <p class="card-text">A website for a theater booking company, built with two of my friends. My role
-                                focused on the back-end development using .Net Core and connecting to our Angular
-                                front-end.</p>
+                            <p class="card-text">As the secondary back-end developer in a team of three, I was
+                                responsible for designing and building the server-side
+                                infrastructure for the El Capitan Explore booking platform. This involved developing a
+                                secure .NET Core Web API that
+                                served as the backbone for the Angular front-end.</p>
                             <a href="https://elcapitanoexplore.com/home" class="btn btn-primary mt-auto"
                                 target="_blank">View Project</a>
                         </div>
@@ -114,9 +119,11 @@
                     <div class="card h-100">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">E-commerce Product Catalog</h5>
-                            <p class="card-text">A responsive e-commerce front-end built from scratch to showcase core web development skills. Implemented with pure
-                            HTML, CSS, and native JavaScript to power features like dynamic product filtering via DOM manipulation, while leveraging
-                            the Bootstrap framework for a modern layout.</p>
+                            <p class="card-text">A responsive e-commerce front-end built from scratch to showcase core
+                                web development skills. Implemented with pure
+                                HTML, CSS, and native JavaScript to power features like dynamic product filtering via
+                                DOM manipulation, while leveraging
+                                the Bootstrap framework for a modern layout.</p>
                             <a href="#" class="btn btn-secondary disabled mt-auto" aria-disabled="true">Source Code</a>
                         </div>
                     </div>
@@ -125,10 +132,14 @@
                 <div class="col-md-6 col-lg-4 project-card mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="card h-100">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">E-commerce Product Catalog</h5>
-                            <p class="card-text">A front-end for an e-commerce site with product listings, search, and
-                                filtering. The back-end is powered by a .NET Core Web API to manage the product data.</p>
-                            <a href="#" class="btn btn-secondary disabled mt-auto" aria-disabled="true">Source Code</a>
+                            <h5 class="card-title">Nutrition & Wellness Platform</h5>
+                            <p class="card-text">Currently developing a full-stack nutrition and wellness platform as a
+                                key contributor in a five-person graduation
+                                project team. The application leverages an Angular front-end for a dynamic, data-driven
+                                user experience, supported by a
+                                robust Node.js back-end API to manage all server-side logic and user data.</p>
+                            <a href="#" class="btn btn-secondary disabled mt-auto" aria-disabled="true">Coming
+                                Soon...</a>
                         </div>
                     </div>
                 </div>
@@ -147,14 +158,15 @@
             <div class="mt-4">
                 <a href="mailto:your.email@example.com" class="btn btn-primary btn-lg mx-2"><i
                         class="fas fa-envelope fa-fw me-2"></i>Email Me</a>
-                <a href="#" class="btn btn-secondary btn-lg mx-2" target="_blank"><i
-                        class="fab fa-linkedin fa-fw me-2"></i>LinkedIn</a>
-                <a href="#" class="btn btn-secondary btn-lg mx-2" target="_blank"><i
+                <a href="https://www.linkedin.com/in/hosam-tamer-52bb00356/" class="btn btn-secondary btn-lg mx-2"
+                    target="_blank"><i class="fab fa-linkedin fa-fw me-2"></i>LinkedIn</a>
+                <a href="https://github.com/LL-Wedjat/" class="btn btn-secondary btn-lg mx-2" target="_blank"><i
                         class="fab fa-github fa-fw me-2"></i>GitHub</a>
             </div>
-            <div class="mt-5 hidden-text">
-                <p>Ready to make a deal with The Devil?</p>
-                <p>It'll only cost your Soul.</p>
+            <div class="mt-5 mb-1 hidden-text">
+                <p class="mb-1">Ready to make a deal with The Devil?</p>
+                <p class="mb-1">The consultation is free. The commitment is eternal.</p>
+                <span>Don't worry about the fine print. It's binding.</span>
             </div>
         </div>
     </section>
@@ -162,9 +174,10 @@
     <!-- footer -->
     <footer class="py-3 text-center">
         <div class="cr-container">
-            <p class="cr">&copy; 2025 Hosam Tamer. All Rights Reserved.</p>
+            <p>&copy; 2025 Hosam Tamer. All Rights Reserved.</p>
             <p class="hidden-cr">⛧ 2025 Crossroads Inc. All Rites Reserved.</p>
-            <p class="hidden-cr">By visiting this site, you agreed to forfeit your Soul. Terms and Conditions will apply.</p>
+            <p class="hidden-cr-o">By visiting this site, you agreed to forfeit your Soul. Terms and Conditions will
+                apply.</p>
         </div>
     </footer>
 
