--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
             <p>Feel free to reach out for any opportunities or just to say hi.</p>
             <div class="mt-4">
-                <a href="mailto:your.email@example.com" class="btn btn-primary btn-lg mx-2"><i
+                <a href="mailto:your.email@example.com" class="btn btn-secondary disabled btn-lg mx-2"><i
                         class="fas fa-envelope fa-fw me-2"></i>Email Me</a>
                 <a href="https://www.linkedin.com/in/hosam-tamer-52bb00356/" class="btn btn-secondary btn-lg mx-2"
                     target="_blank"><i class="fab fa-linkedin fa-fw me-2"></i>LinkedIn</a>
