--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <h5 class="card-title">El Capitano Explore</h5>
                             <p class="card-text">As the secondary back-end developer in a team of three, I was
                                 responsible for designing and building the server-side
-                                infrastructure for the El Capitan Explore booking platform. This involved developing a
+                                infrastructure for the El Capitano Explore booking platform. This involved developing a
                                 secure .NET Core Web API that
                                 served as the backbone for the Angular front-end.</p>
                             <a href="https://elcapitanoexplore.com/home" class="btn btn-primary mt-auto"
